# react-native-rust-ffi

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  RustFfi.podspec  babel.config.js  generate.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native.config.js  tsconfig.build.json  tsconfig.json  ubrn.config.yaml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativerustffi/: RustFfiModule.kt  RustFfiPackage.kt
cpp/: react-native-rust-ffi.cpp  react-native-rust-ffi.h
expo-example/: App.tsx  app.json  metro.config.js  package.json  react-native.config.js
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs  rustffi.udl
ios/: RustFfi.h  RustFfi.mm
lib/commonjs/: NativeRustFfi.js  NativeRustFfi.js.map  index.js  index.js.map
lib/module/: NativeRustFfi.js  NativeRustFfi.js.map  index.js  index.js.map
lib/typescript/commonjs/plugin/src/: index.d.ts.map  withAndroid.d.ts.map  withIOS.d.ts
lib/typescript/commonjs/src/: NativeRustFfi.d.ts.map  index.d.ts  index.d.ts.map
lib/typescript/module/plugin/src/: index.d.ts  withAndroid.d.ts  withIOS.d.ts.map
lib/typescript/module/src/: NativeRustFfi.d.ts
plugin/src/: index.ts  withAndroid.ts  withIOS.ts
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: patch-bindings.sh
src/: NativeRustFfi.ts  index.tsx
