[package]
name = "rust-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "rust_ffi"

[dependencies]
rust-core = { path = "../rust" }
uniffi = { version = "=0.30.0", features = ["cli"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
once_cell = "1"

[build-dependencies]
uniffi = { version = "=0.30.0", features = ["build"] }
